# backend_learnings

./: .gitignore  README.md  pyproject.toml
docs/explainers/: pr-01-python-project-setup.md  pr-02-hello-world-fastapi.md
learn_backend/: __init__.py  main.py
tests/: test_health.py  test_smoke.py
